Update and rename Spotify.html to Player.html

--- a/Player.html
+++ b/Player.html
@@ -33,13 +33,13 @@
 
                 <div class="songitem">
                     <img src="" alt="1">
-                    <span class="songName">Mr. Producer</span>
+                    <span class="songName">Suicide</span>
                     <span class="songlistplay"><span class="timestamp">05:34<i id="2"  class="far songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songitem">
                     <img src="" alt="1">
-                    <span class="songName">Suicide</span>
+                    <span class="songName">Forgot Your Name</span>
                     <span class="songlistplay"><span class="timestamp">05:34<i id="3" class="far songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
@@ -51,21 +51,17 @@
 
                 <div class="songitem">
                     <img src="" alt="1">
-                    <span class="songName">Forgot Your Name</span>
+                    <span class="songName">Sugar Daddy</span>
                     <span class="songlistplay"><span class="timestamp">05:34<i id="5" class="far songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songitem">
                     <img src="" alt="1">
-                    <span class="songName">Sugar Daddy</span>
+                    <span class="songName">Part Time</span>
                     <span class="songlistplay"><span class="timestamp">05:34<i id="6" class="far songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
-                <div class="songitem">
-                    <img src="" alt="1">
-                    <span class="songName">#####</span>
-                    <span class="songlistplay"><span class="timestamp">05:34<i id="7" class="far songItemPlay fa-play-circle"></i></span></span>
-                </div>
+                
             </div>
 
         </div>
